Fixes to MainSite component to fix content not loading on small devices

--- a/frontend/src/components/sites/MainSite/styles/MainSite.module.scss
+++ b/frontend/src/components/sites/MainSite/styles/MainSite.module.scss
@@ -14,4 +14,5 @@
     position: relative;
     display: flex;
     justify-content: center;
+    min-height: calc(100vh - 86px);
 }
